# grnet-detect-ros

./: README.md  compile_commands.json  dev_setup.sh  package.xml  setup.sh
grnet-detect-ros/: CMakeLists.txt  package.xml
grnet_detect/: CMakeLists.txt  compile_commands.json  setup.py
grnet_detect/src/: detect_object.py
grnet_detect/src/GRNetDetector/: GRNet_Detector.py
launch/: grnet_service.launch
src/GRNetDetector/: GRNet_Detector.py
src/GRNetDetector/utils/: io.py
srv/: PC2ToPC2.srv
